--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertanyaan Acak</title>
+    <title>Tantangan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,11 +30,11 @@
     </div>
     <script>
         const questions = [
-            "Apa warna langit pada hari cerah?",
-            "Berapa banyak jari di tangan manusia?",
-            "Apa nama ibu kota negara Indonesia?",
-            "Sebutkan satu hewan yang bisa terbang.",
-            "Apa yang biasanya kita makan untuk sarapan?"
+            "Ambil foto tanaman yang merambat!",
+            "Ambil foto tanaman yang melakukan fotosistesis!",
+            "Ambil foto salah satu bagian dari rantai makanan disekitarmu!",
+            "Ambil foto salah satu komponen biotik!",
+            "Ambil foto salah satu komponen abiotik!"
         ];
 
         function showRandomQuestion() {
