--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pertanyaan Acak</h1>
+        <h1>Tantangan</h1>
         <p id="question">Loading question...</p>
     </div>
     <script>
